@@ -1,3 +1,12 @@
+2026-02-26T02:26:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22425163228 # 889
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-26
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 36 / 14 36
+* notice: next accum: outdated-unq outdated-all / unq all: 14 36 / 14 36
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-29 2026-01-30 2026-01-31 2026-02-01 2026-02-02 2026-02-03 2026-02-04 2026-02-05 2026-02-06 2026-02-07 2026-02-08 2026-02-09 2026-02-10] / []
+
 2026-02-25T02:30:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22379522222 # 888
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-25
